05-tls-policy/route-tls.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway-tls
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/part-of: connectivity-link-tutorial
spec:
  host: echo.${CLUSTER_DOMAIN}
  to:
    kind: Service
    name: api-gateway-openshift-default
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
